--- a/tests/BasicTests.html
+++ b/tests/BasicTests.html
@@ -10,12 +10,12 @@
         <div id="qunit-fixture">
             <div id="jscore-container"></div>
         </div>
-        <script src="../dist.js"></script>
+        <script src="../dist/jscore.js"></script>
         <script src="lib/qunit-1.18.0.js"></script>
         <script src="ScoreTest.js"></script>
-        <script src="RendererContextTest.js"></script>
+        <!-- <script src="RendererContextTest.js"></script>
         <script src="KeyTest.js"></script>
         <script src="NoteTest.js"></script>
-        <script src="BarTest.js"></script>
+        <script src="BarTest.js"></script> -->
     </body>
 </html>
