--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>MyNote</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
     <script type="text/javascript" src="/jscore.js"></script>
   </body>
 </html>
